2013-01-02  David Tseng  <dtseng@google.com>

        AX: Chromium needs platform localized strings for media controls.
        https://bugs.webkit.org/show_bug.cgi?id=105940

        Reviewed by Tony Chang.

        * src/LocalizedStrings.cpp:
        (WebCore::localizedMediaControlElementString):
        (WebCore):
        (WebCore::localizedMediaControlElementHelpText):

2013-01-02  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Add Platform/chromium to include_dirs
        https://bugs.webkit.org/show_bug.cgi?id=105955

        Reviewed by James Robinson.

        Currently the headers in WebKit/chromium/public/Web*.h can not
        include headers from the new Platform/chromium/ directory with the
        "#include <public/WebFoo.h>" syntax, because the include_dirs for
        dependent builds (like Chromium-within-WebKit) do not include the
        new Platform/chromium/ directory. This patch adds that capability
        without managing to break anything else.

        * WebKit.gyp:

2013-01-02  Alec Flett  <alecflett@chromium.org>

        IndexedDB: Use non-const buffers in put() to avoid copies
        https://bugs.webkit.org/show_bug.cgi?id=105572

        Reviewed by Adam Barth.

        Pass on non-const Vectors to allow buffer adoption rather than copies.

        * public/WebIDBDatabase.h:
        (WebIDBDatabase):
        (WebKit::WebIDBDatabase::put):
        * src/IDBDatabaseBackendProxy.cpp:
        (WebKit::IDBDatabaseBackendProxy::put):
        * src/IDBDatabaseBackendProxy.h:
        (IDBDatabaseBackendProxy):
        * src/WebIDBDatabaseImpl.cpp:
        (WebKit::WebIDBDatabaseImpl::put):
        * src/WebIDBDatabaseImpl.h:
        (WebIDBDatabaseImpl):
        * tests/IDBDatabaseBackendTest.cpp:

2013-01-02  Robert Kroeger  <rjkroege@chromium.org>

        [chromium] Use top level field for gesture event source
        https://bugs.webkit.org/show_bug.cgi?id=105664

        Reviewed by Adam Barth.
